more about the editor

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -291,6 +291,38 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <P><FONT face=Verdana size=2><B>Note:</B> For existing workspaces, you may 
       need to reset the templates back to their default values.</FONT> 
 </P></TD></TR>
+  <TR>
+    <TD vAlign=top colSpan=2><HR></TD>
+  </TR>
+  <TR>
+    <TD vAlign=top align=left width="30%"><b>More quick fixes</b></TD>
+    <TD vAlign=top width="70%">There are now quick fixes for additional Java problems: 
+      adding stubs for unimplemented methods; adding either a catch clause or 
+      a throws declaration to deal with an uncaught exception; removing a catch 
+      clause to deal with an exception no longer thrown.</TD>
+  </TR>	
+  <TR>
+    <TD vAlign=top colSpan=2><HR></TD>
+  </TR>
+  <TR>
+    <TD vAlign=top align=left width="30%"><b>Quick assist</b></TD>
+    <TD vAlign=top width="70%">Hitting CTRL + 1 in the Java editor when the quick 
+      fix icon (yellow light bulb) is showing brings up the menu of available 
+      quick fixes. This provides an easy way to declare new local variables, parameters, 
+      and fields without having to break stride.</TD>
+  </TR>	
+
+  <TR>
+    <TD vAlign=top colSpan=2>&nbsp;</TD>
+  </TR>
+  <TR>
+    <TD vAlign=top align=left width="30%"><b>More Quick Fixes</b></TD>
+    <TD vAlign=top width="70%">Click the light bulb in the left margin of the 
+      Java editor to get help with fixing compiler-detected problems, including: 
+      instance variable used in a static context; abstract method in a non-abstract 
+      type; unimplemented abstract methods; missing catch clauses for uncaught 
+      exceptions; non-visible method, field, type, or import.</TD>
+  </TR>	
 
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -321,9 +353,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Paste indentation</b></TD>
-    <TD vAlign=top width="70%">The Java editor automatically determines the right 
-      amount of indentation to use when pasting code. This behavior is controlled 
-      by a preference setting on the Java / Editor / Behavior panel.</TD>
+    <TD vAlign=top width="70%">
+      <p>The Java editor automatically determines the right amount of indentation 
+        to use when pasting code. This behavior is controlled by a preference 
+        setting on the Java / Editor / Typing panel.</p>
+      <p><img src="images/paste_indent.PNG" width="429" height="214"></p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -332,16 +367,20 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top align=left width="30%"><b>Improved Java outline view</b></TD>
     <TD vAlign=top width="70%">You can adjust the Java outline to show just the 
       members of the compilation unit's main type by pressing the leftmost button 
-      (Go Into Top Level Type) in the Outline view toolbar.</TD>
+      <img src="images/gointo_toplevel_type.gif" width="16" height="16">(Go Into 
+      Top Level Type) in the Outline view toolbar.</TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Customizable error indicators</b></TD>
-    <TD vAlign=top width="70%">The Java editor now offers improved customizability 
-      for the visual appearance of errors, warning, tasks, etc. These preference 
-      settings are found on the Java / Editor / Problem Indication panel.</TD>
+    <TD vAlign=top width="70%">
+      <p>The Java editor now offers improved customizability for the visual appearance 
+        of errors, warning, tasks, etc. These preference settings are found on 
+        the Java / Editor / Annotations panel.</p>
+      <p><img src="images/annotations_pref_page.PNG" width="429" height="250"></p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -353,38 +392,6 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       clickable links to the corresponding declaration.</TD>
   </TR>	
 
-  <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
-  </TR>
-  <TR>
-    <TD vAlign=top align=left width="30%"><b>More quick fixes</b></TD>
-    <TD vAlign=top width="70%">There are now quick fixes for additional Java problems: 
-      adding stubs for unimplemented methods; adding either a catch clause or 
-      a throws declaration to deal with an uncaught exception; removing a catch 
-      clause to deal with an exception no longer thrown.</TD>
-  </TR>	
-  <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
-  </TR>
-  <TR>
-    <TD vAlign=top align=left width="30%"><b>Quick assist</b></TD>
-    <TD vAlign=top width="70%">Hitting CTRL + 1 in the Java editor when the quick 
-      fix icon (yellow light bulb) is showing brings up the menu of available 
-      quick fixes. This provides an easy way to declare new local variables, parameters, 
-      and fields without having to break stride.</TD>
-  </TR>	
-
-  <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
-  </TR>
-  <TR>
-    <TD vAlign=top align=left width="30%"><b>More Quick Fixes</b></TD>
-    <TD vAlign=top width="70%">Click the light bulb in the left margin of the 
-      Java editor to get help with fixing compiler-detected problems, including: 
-      instance variable used in a static context; abstract method in a non-abstract 
-      type; unimplemented abstract methods; missing catch clauses for uncaught 
-      exceptions; non-visible method, field, type, or import.</TD>
-  </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
@@ -402,10 +409,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Smart typing in Java code</b></TD>
-    <TD vAlign=top width="70%">There is a new preference page (Java / Editor / 
-      Behavior) for controlling automatic closing of parentheses, brackets, strings, 
-      and comments, for smart wrapping of strings, and other helpful Java-specific 
-      editor behavior.</TD>
+    <TD vAlign=top width="70%">
+      <p>There is a new preference page (<b>Java / Editor / Typing</b>) for controlling 
+        automatic closing of parentheses, brackets, strings, and comments, for 
+        smart wrapping of strings, and other helpful Java-specific editor behavior.</p>
+      <p><img src="images/editor_typing_pref_page.PNG" width="428" height="279"></p>
+    </TD>
   </TR>		
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -514,6 +523,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       now provides completion on keywords.</FONT></TD></TR>
 		
 </table>
+<hr>
 <h2>Refactoring<a name="refactor"></a></h2>
 <table border="0" cellpadding="10" cellspacing="0" width="500">
   <TR>
