--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -421,10 +421,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>More errors detected on the fly</b></TD>
-    <TD vAlign=top width="70%">The Java editor now put the wavy red underline 
-      (known colloquially as the &quot;red sea&quot;) under all types of errors, 
-      now including uncaught exceptions and unused variables, which require detailed 
-      flow analysis.</TD>
+    <TD vAlign=top width="70%">
+      <p>The Java editor now put the wavy red underline (known colloquially as 
+        the &quot;red sea&quot;) under all types of errors, now including uncaught 
+        exceptions and unused variables, which require detailed flow analysis.</p>
+      <p><img src="images/errors_on_the_fly.PNG" width="420" height="134"></p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2>
