--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -268,6 +268,34 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <P align=center><FONT face=Verdana size=2><IMG 
       src="images/search.gif" border=0></FONT></P></TD></TR>
   <TR>
+    <TD vAlign=top colSpan=2>
+      <HR>
+    </TD></TR>
+  <TR>
+    <TD vAlign=top align=left width="30%">
+      <DIV align=right><B><FONT face=Verdana size=2>Quick 
+    assist</FONT></B></DIV></TD>
+    <TD vAlign=top width="70%"><FONT face=Verdana size=2>Position the cursor 
+      in an identifier and press Ctrl+1 (<B>Edit &gt; Quick Fix</B>) in the Java 
+      editor to invoke the quick fix mechanism even when there are no 
+      errors.</FONT> 
+      <UL>
+        <LI><FONT face=Verdana size=2>Linked rename: Available on all identifiers.</FONT> 
+          <P align=left><FONT face=Verdana size=2><IMG height=239 
+        src="images/linkedrename.gif" width=466 border=1> 
+        <BR><BR>Switches into the editor linked mode editing (like templates), 
+        where changing the identifier changes all occurrences of that name 
+        within the source file.</FONT> </P>
+        <LI><FONT face=Verdana size=2>Move catch block to throws declaration: 
+        Available on the catch statement.</FONT> 
+        <LI><FONT face=Verdana size=2>Assign expression statements to a local 
+        variable or field: Available on all expression statements. 
+        e.g.:&nbsp;</FONT> <TT><FONT face=Verdana size=2>&nbsp;&nbsp; 
+        vector.iterator();</FONT></TT> <FONT face=Verdana size=2><BR>will be 
+        transformed to<BR><TT>&nbsp;&nbsp; Iterator iterator= 
+        vector.iterator();</TT> <BR>Quick assist will guess a variable name for 
+        you.</FONT> </LI></UL></TD></TR>
+  <TR>
     <TD colSpan=2>
       <HR>
     </TD></TR>
@@ -463,7 +491,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     </TD></TR>
   <TR>
     <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>Go to last edit 
+      <P><B><FONT face=Verdana size=2>Go to last edit 
       position</FONT></B> </P></TD>
     <TD vAlign=top width="70%"><FONT face=Verdana size=2>Press Ctrl+Q (<B>Navigate 
       &gt; Go to Last Edit Position</B>) in any text-based editor to take you 
@@ -477,35 +505,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     </TD></TR>
   <TR>
     <TD vAlign=top align=left width="30%">
-      <DIV align=right><B><FONT face=Verdana size=2>Quick 
-    assist</FONT></B></DIV></TD>
-    <TD vAlign=top width="70%"><FONT face=Verdana size=2>Position the cursor 
-      in an identifier and press Ctrl+1 (<B>Edit &gt; Quick Fix</B>) in the Java 
-      editor to invoke the quick fix mechanism even when there are no 
-      errors.</FONT> 
-      <UL>
-        <LI><FONT face=Verdana size=2>Linked rename: Available on all identifiers.</FONT> 
-          <P align=left><FONT face=Verdana size=2><IMG height=239 
-        src="images/linkedrename.gif" width=466 border=1> 
-        <BR><BR>Switches into the editor linked mode editing (like templates), 
-        where changing the identifier changes all occurrences of that name 
-        within the source file.</FONT> </P>
-        <LI><FONT face=Verdana size=2>Move catch block to throws declaration: 
-        Available on the catch statement.</FONT> 
-        <LI><FONT face=Verdana size=2>Assign expression statements to a local 
-        variable or field: Available on all expression statements. 
-        e.g.:&nbsp;</FONT> <TT><FONT face=Verdana size=2>&nbsp;&nbsp; 
-        vector.iterator();</FONT></TT> <FONT face=Verdana size=2><BR>will be 
-        transformed to<BR><TT>&nbsp;&nbsp; Iterator iterator= 
-        vector.iterator();</TT> <BR>Quick assist will guess a variable name for 
-        you.</FONT> </LI></UL></TD></TR>
-  <TR>
-    <TD vAlign=top colSpan=2>
-      <HR>
-    </TD></TR>
-  <TR>
-    <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>Class file editor</FONT></B> 
+      <P><B><FONT face=Verdana size=2>Class file editor</FONT></B> 
       </P></TD>
     <TD width="70%"><FONT face=Verdana size=2>The <B>Class File Editor</B> has 
       caught up with the <B>Compilation Unit Editor</B>. It now supports cursor-line 
@@ -519,7 +519,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     </TD></TR>
   <TR>
     <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>Java keyword 
+      <P><B><FONT face=Verdana size=2>Java keyword 
       completion</FONT></B> </P></TD>
     <TD width="70%"><FONT face=Verdana size=2>Code assist is the Java editor 
       now provides completion on keywords.</FONT></TD></TR>
@@ -528,6 +528,35 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
 <hr>
 <h2>Refactoring<a name="refactor"></a></h2>
 <table border="0" cellpadding="10" cellspacing="0" width="500">
+  <TR>
+    <TD vAlign=top colSpan=2>
+      <HR>
+    </TD></TR>
+  <TR>
+    <TD vAlign=top align=left width="30%">
+      <P align=right><B><FONT face=Verdana size=2>New lightweight refactoring 
+      UI</FONT></B> </P></TD>
+    <TD vAlign=top width="70%">
+      <P><FONT face=Verdana size=2>Activating any Java refactoring operation now 
+        pops up a small starting dialog to gather information needed to perform 
+        the refactoring. Click <B>OK</B> to execute the refactoring without further 
+        ado, or click <B>Preview</B> to see its effects before deciding whether 
+        to go ahead.</FONT></P>
+      <P align=center><FONT face=Verdana size=2><IMG height=227 
+      src="images/refactoring.gif" width=466></FONT></P></TD></tr>
+	    <TR>
+    <TD colSpan=2>
+      <HR>
+    </TD></TR>
+  <TR>
+    <TD vAlign=top align=left width="30%">
+      <P align=right><B><FONT face=Verdana size=2>Refactoring can update 
+      non-Java files</FONT></B> </P></TD>
+    <TD width="70%"><FONT face=Verdana size=2>When renaming a Java type or package 
+      (or when moving a type to a different package), the fully qualified name 
+      of the element can now be updated in non-Java files as well.</FONT> 
+      <P align=center><FONT face=Verdana size=2><IMG 
+      src="images/refactor.gif" border=0></FONT></P></TD></TR>
   <TR>
     <TD colSpan=2>
       <HR>
@@ -549,8 +578,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     </TD></TR>
   <TR>
     <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>Pull Up refactoring</FONT></B> 
-      </P></TD>
+      <P><B><FONT face=Verdana size=2>Improved Pull Up refactoring</FONT></B> 
+      </P>
+    </TD>
     <TD width="70%">
       <P><FONT face=Verdana size=2>Pull Up refactoring is more powerful now. 
       Additional functionality includes:</FONT> </P>
@@ -587,24 +617,19 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
         <LI><FONT face=Verdana size=2>leave it as is</FONT> </LI></UL>
       <P align=center><FONT face=Verdana size=2><IMG 
       src="images/push-down.gif" border=0> </FONT></P></TD></TR>
-	    <TR>
-    <TD colSpan=2>
-      <HR>
-    </TD></TR>
   <TR>
-    <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>Refactoring can update 
-      non-Java files</FONT></B> </P></TD>
-    <TD width="70%"><FONT face=Verdana size=2>When renaming a Java type or package 
-      (or when moving a type to a different package), the fully qualified name 
-      of the element can now be updated in non-Java files as well.</FONT> 
-      <P align=center><FONT face=Verdana size=2><IMG 
-      src="images/refactor.gif" border=0></FONT></P></TD></TR>
-	    <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Refactor &gt; Inline Constant</b></TD>
+    <TD vAlign=top align=left width="30%"><b>Inline Method</b></TD>
+    <TD vAlign=top width="70%">Inlines calls to a particular Java method, either 
+      at a selected call site or everywhere a particular method is called</TD>
+  </TR>	
+   <TR>
+    <TD vAlign=top colSpan=2><HR></TD>
+  </TR>
+  <TR>
+    <TD vAlign=top align=left width="30%"><b>Inline Constant</b></TD>
     <TD vAlign=top width="70%">inlines uses of a particular Java static final 
       field, either at a selected reference site or everywhere a particular field 
       is referenced.</TD>
@@ -613,8 +638,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Refactor &gt; Promote Local Variable 
-      to Field</b></TD>
+    <TD vAlign=top align=left width="30%"><b>Convert Local Variable to Field</b></TD>
     <TD vAlign=top width="70%">allows you to turn a local variable into a field. 
       If the variable is initialized on creation, then the operation moves the 
       initialization to the new field's declaration or to the class's constructors.</TD>
@@ -623,41 +647,35 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Refactor &gt; Convert Anonymous Class 
-      to Nested Class</b></TD>
+    <TD vAlign=top align=left width="30%"><b>Convert Anonymous Class to Nested 
+      Class</b></TD>
     <TD vAlign=top width="70%">applies to the selected anonymous class declaration.</TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Refactor &gt; Inline Method</b></TD>
-    <TD vAlign=top width="70%">Inlines calls to a particular Java method, either 
-      at a selected call site or everywhere a particular method is called</TD>
-  </TR>	
+    <TD vAlign=top align=left width="30%"><b>Convert Member Type to Top Level 
+      Level Type</b></TD>
+    <TD vAlign=top width="70%">Creates a new Java compilation unit for the selected 
+      inner class, updating all references as needed. For non-static inner classes, 
+      a field is added to allow access to the former enclosing instance.</TD>
+  </TR>
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Refactor &gt; Change Signature</b></TD>
+    <TD vAlign=top align=left width="30%"><b>Change Method Signature</b></TD>
     <TD vAlign=top width="70%"> lets you can change the signature of a method 
       to add or remove parameters, or change parameter or return types. These 
       changes are applied to the declaration of the method, anywhere the method 
       is overridden or implemented, and anywhere it is called. </TD>
-  </TR>	
+  </TR>		
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Refactor &gt; Use Supertype Where 
-      Possible</b></TD>
-    <TD vAlign=top width="70%">Replaces usages of a type with one of its supertypes</TD>
-  </TR>	
-  <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
-  </TR>
-  <TR>
-    <TD vAlign=top align=left width="30%"><b>Refactor &gt; Extract Constant</b></TD>
+    <TD vAlign=top align=left width="30%"><b>Extract Constant</b></TD>
     <TD vAlign=top width="70%">Creates a static final field from the selected 
       expression and substitutes a field reference, and optionally rewrites other 
       places where the same expression occurs.</TD>
@@ -666,7 +684,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Refactor &gt; Extract Interface</b></TD>
+    <TD vAlign=top align=left width="30%"><b>Extract Interface</b></TD>
     <TD vAlign=top width="70%">Creates a new interface with a set of method and 
       makes the selected class implement the interface, optionally changing references 
       to the class to the new interface wherever possible.</TD>
@@ -675,52 +693,10 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Refactor &gt; Move Inner Class to 
-      Top Level</b></TD>
-    <TD vAlign=top width="70%">Creates a new Java compilation unit for the selected 
-      inner class, updating all references as needed. For non-static inner classes, 
-      a field is added to allow access to the former enclosing instance.</TD>
-  </TR>	
-  <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
+    <TD vAlign=top align=left width="30%"><b>Use Supertype Where Possible</b></TD>
+    <TD vAlign=top width="70%">Replaces usages of a type with one of its supertypes</TD>
   </TR>
-  <TR>
-    <TD vAlign=top align=left width="30%"><b>Extract Interface refactoring</b></TD>
-    <TD vAlign=top width="70%">creates a new interface with a set of method and 
-      makes the selected class implement the interface. <br>
-      Also, an option is provided to change references to the class into references 
-      to the new interface (where possible).<br>
-      The refactoring can be activated by selecting a class and choosing the appropriate 
-      entry from the context or global Refactor menu. </TD>
-  </TR>	
-  <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
-  </TR>
-  <TR>
-    <TD vAlign=top align=left width="30%"><b>Move Inner Class to Top Level refactoring</b></TD>
-    <TD vAlign=top width="70%">select an inner class and choose the appropriate 
-      action from <br>
-      the context or or global Refactor menu. A new compilation unit will be created 
-      and the inner class will be moved to that compilation unit.<br>
-      Where necessary, references will be updated. If the class is not static, 
-      then a field is created to access the enclosing instance. </TD>
-  </TR>	
-  <TR>
-    <TD vAlign=top colSpan=2>
-      <HR>
-    </TD></TR>
-  <TR>
-    <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>New lightweight refactoring 
-      UI</FONT></B> </P></TD>
-    <TD vAlign=top width="70%">
-      <P><FONT face=Verdana size=2>Activating any Java refactoring operation now 
-        pops up a small starting dialog to gather information needed to perform 
-        the refactoring. Click <B>OK</B> to execute the refactoring without further 
-        ado, or click <B>Preview</B> to see its effects before deciding whether 
-        to go ahead.</FONT></P>
-      <P align=center><FONT face=Verdana size=2><IMG height=227 
-      src="images/refactoring.gif" width=466></FONT></P></TD></tr>
+		
 </table>
 
 <h2>JUnit integration<a name="Junit"></a></h2>
@@ -738,9 +714,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Finding unit tests</b></TD>
-    <TD vAlign=top width="70%">The new JUnit action Navigate &gt; Go To &gt; Referring 
-      Tests finds and navigates to tests that reference a particular type or method. 
-    </TD>
+    <TD vAlign=top width="70%">The new JUnit action <b>Navigate &gt; Go To &gt; 
+      Referring Tests</b> finds and navigates to tests that reference a particular 
+      type or method. </TD>
   </TR>
     <TR>
     <TD colSpan=2>
@@ -748,7 +724,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     </TD></TR>
   <TR>
     <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>JUnit</FONT></B> </P></TD>
+      <P><B><FONT face=Verdana size=2>Run as JUnit Test</FONT></B> </P></TD>
     <TD width="70%"><FONT face=Verdana size=2>Select a JUnit test method in a 
       view and choose <B>Run &gt; Run As &gt; JUnit test</B>. This creates a 
       launch configuration to run the selected test.</FONT></TD></TR>
