*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -12,8 +12,10 @@
 </h1>
 <table border="0" cellpadding="10" cellspacing="0" width="500">
   <tr> 
-    <td width="30%" valign="top" align="right"><div align="right"> <b>Stop in Main</b> </div></td>
-    <td width="70%" valign="top" align="left">
+    <td width="30%" valign="top" align="right">
+      <div align="right"> <b>Stop in Main</b> </div>
+    </td>
+    <td width="70%" valign="top" align="left"> 
       <p>You can use <strong>Stop in main&nbsp;</strong>in a Java Application 
         launch configuration to cause your program to stop at the first executable 
         line of the main method when you run it under debug mode.</p>
@@ -61,7 +63,9 @@
     </td>
   </tr>
   <tr> 
-    <td width="30%" valign="top" align="right"><div aligh="right"> <b>Creating watch items</b> </div></td>
+    <td width="30%" valign="top" align="right">
+      <div aligh="right"> <b>Creating watch items</b> </div>
+    </td>
     <td width="70%" valign="top" align="left">The Java debugger can create watch 
       items from the Java editor by selecting an expression and using the <b>Watch</b> 
       action (available in the context menu, and in the <b>Run</b> menu). As well, 
@@ -90,6 +94,20 @@
       Debug view.</td>
   </tr>
   <tr> 
+    <td width="30%" valign="top" align="right"><b>Detail formatters</b></td>
+    <td width="70%" valign="top" align="left">
+      <p>In the <b>Variables</b> &amp; <b>Expressions</b> views, the detail pane 
+        shows an expanded representation of the currently selected variable. By 
+        default, this expanded representation is the result of calling <b>toString()</b> 
+        on the selected object, but you can create a custom detail formatter that 
+        will be used instead by choosing <b>New Detail Formatter</b> from the 
+        variable's context menu. This detail formatter will be used for all objects 
+        of the same type. You can view and edit all detail formatters in the Java&gt;Debug&gt;Detail 
+        Formatters preference page. </p>
+      <p><img src="images/detail-formatter.gif" width="426" height="582"></p>
+    </td>
+  </tr>
+  <tr> 
     <td width="30%" valign="top" align="right"><b>Word wrap in<br>
       Variables<br>
       view</b></td>
@@ -102,7 +120,7 @@
   <tr> 
     <td width="30%" valign="top" align="right"><b>Stack trace<br>
       hyperlinks</b></td>
-    <td width="70%" valign="top" align="left">
+    <td width="70%" valign="top" align="left"> 
       <p>Java stack traces in the console now appear with hyperlinks. When you 
         place the mouse over a line in a stack trace, the pointer changes to the 
         hand and the stack trace is underlined. Pressing the mouse button opens 
