--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectiveExtension.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectiveExtension.htm
@@ -100,7 +100,7 @@ Plug-ins can also add view shortcuts and new wizard shortcuts in a similar
 manner.&nbsp;&nbsp;</P>
 
 
-<P >You can also specify one or more views as a <b>showInPart</b>.&nbsp; The
+<P >You can also specify one or more views as a valid <b>showInPart</b>.&nbsp; The
 views should be specified by the id used in their <b><a href="../reference/extension-points/org_eclipse_ui_views.html">org.eclipse.ui.views</a></b>
 extension contribution.&nbsp;&nbsp; This controls which views are available as
 targets in the <b>Navigate &gt; Show In </b>menu.&nbsp; The ability to specify a
