Updated what's new for Ant

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -84,13 +84,13 @@ size throughout.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>Improved Ant view</b></td>
+    <td width="30%" valign="top" align="right"><b>Ant view</b></td>
     <td width="70%" valign="top" align="left">There is a new Ant view (<b>Window
-      &gt; Show View &gt; Ant</b>) that makes it easier to run Ant scripts. The
-      Ant view has been completely redesigned and streamlined to simplify
-      running a single Ant target. The view also includes a search button for
+      &gt; Show View &gt; Ant</b>) that makes it easier to run Ant build files. The
+      Ant view allows you to view your Ant build files in one place and simplifies
+      running a single Ant target. The view includes a search button for
       finding Ant build files in the workspace to add to the view.
-      <p align="center"><img border="0" src="images/ant-view.gif" width="353" height="329"></td>
+      <p align="center"><img border="0" src="images/ant-view.gif" width="292" height="169"></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>External tools &amp; launch
@@ -104,6 +104,13 @@ size throughout.]</p>
       thread. This means that you can let an Ant build run or launch an external
       program and still continue to work in the Eclipse IDE.</p>
       <p align="center"><img border="0" src="images/ant-tabs.gif" width="474" height="574"></td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Ant editor</b></td>
+    <td width="70%" valign="top" align="left">
+      <p>There is a new Ant editor that makes it easier to edit Ant build files.
+      The Ant editor provides content assist, syntax highlighting, an outline, and error reporting.</p>
+      <p align="center"><img border="0" src="images/ant-editor.gif" width="624" height="293"></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>More flexible project layouts</b></td>
