--- a/bundles/org.eclipse.platform.doc.isv/guide/editors.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors.htm
@@ -19,8 +19,7 @@ haven't yet looked at the implementation of an editor.</P>
 A tool that edits and manages a particular resource type will
 provide customized behavior for manipulating the data represented by the resource.</P>
 <P >Editors can come in all shapes and sizes.&nbsp; If a plug-in's editor is text-based, then the editor can either use the existing default text editor, or create a customized text editor
-by using the facilities provided in
-JFace.&nbsp; The latter approach is used by the Java development tooling (JDT)
+by using the facilities provided in the platform.&nbsp; The latter approach is used by the Java development tooling (JDT)
 editors.&nbsp;&nbsp;</P>
     <p >
 <img alt="" border="0" src="images/javaeditor.jpg" width="429" height="376">
@@ -45,7 +44,10 @@ List-oriented editors can use JFace list, tree, and table viewers to manipulate
 their data.</li>
 </ul>
 <P >
-Once the implementation model for the editor has been determined, programming the editor behavior is much like programming a stand-alone JFace or SWT application.
+Once the implementation model for the editor has been determined, implementing the editor is much like programming a stand-alone JFace or SWT application.&nbsp;
+Platform extensions are used to add actions, preferences, and wizards needed to
+support the editor.&nbsp; But the internals of the editor are largely dependent
+on your application design principles and internal model.
 </P>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
 </BODY>
