reorg platform text

--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench_outliner.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench_outliner.htm
@@ -28,6 +28,9 @@ behavior for an interesting outline view.&nbsp; Therefore, the default <b>Outlin
 shown below, doesn't
 do much.</P>
 <P ><img border="0" src="images/genericoutliner.jpg" width="271" height="292" alt="Default content outliner"></P>
+<P >&lt;in progress.&nbsp; update to show the outliner provided by the
+JavaEditor example.)</P>
+<P >&nbsp;</P>
 <P >Plug-ins can extend <a href="../reference/api/org/eclipse/ui/editors/text/TextEditor.html"><b> TextEditor</b></a><b>
 </b>for the sole purpose of adding a custom content outliner page to the
 outline view.&nbsp;&nbsp; This approach is used in the workbench readme tool example.&nbsp;
