--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench.htm
@@ -19,6 +19,9 @@ workbench provides a
 general structure for building an editor.&nbsp; The following concepts apply to
 all workbench editors.</P>
 
+<h3 >
+Editor parts and their inputs</h3>
+
 <P >
 An editor must implement <a href="../reference/api/org/eclipse/ui/IEditorPart.html"><b>IEditorPart</b></a>
 and is often built by extending the <a href="../reference/api/org/eclipse/ui/part/EditorPart.html"><b>EditorPart</b></a>
@@ -45,11 +48,11 @@ that is a stream of bytes. These bytes may come from sources other than the file
 Resetting the editor input</h3>
 
 
-<P >If the implementation of your editor can support the replacement of the
+<P >If your editor can support the replacement of the
 editor's input object on the fly, you should implement&nbsp; <a href="../reference/api/org/eclipse/ui/IReusableEditor.html"><b>IReusableEditor</b></a>.
 Implementing this interface allows the workbench to &quot;recycle&quot; your
 editor.&nbsp; Workbench user preferences allow the user to dictate that editors
-should be reused after a user-designated number of them are open.</P>
+should be reused after a certain number of them are open.</P>
 
 
 <h3 >
@@ -58,7 +61,7 @@ Navigating the editor input&nbsp;</h3>
 
 <P >If you want to implement a navigation history in your editor, you should
 implement <a href="../reference/api/org/eclipse/ui/INavigationLocationProvider.html"><b>INavigationLocationProvider</b></a>.&nbsp;
-This provides a mechanism for the workbench to request the current navigation
+This provides a mechanism for the workbench to request a current navigation
 location (<a href="../reference/api/org/eclipse/ui/INavigationLocation.html"><b>INavigationLocation</b></a>)<b>
 </b>as needed to keep a navigation history.&nbsp; The workbench handles the
 mechanics of the navigation user interface.&nbsp; Your <a href="../reference/api/org/eclipse/ui/INavigationLocation.html"><b>INavigationLocation</b></a><b>
