*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_menupaths.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_menupaths.htm
@@ -247,7 +247,7 @@ group:</p>
 </b></font>...</pre>
 <p>The paths defined in <a href="../reference/api/org/eclipse/ui/IWorkbenchActionConstants.html"><b> IWorkbenchActionConstants</b></a>
  may be referenced in the tool bar paths of other plug-ins.</p>
-<h4>Appending to action sets of another plug-in</h4>
+<h4>Adding to action sets of another plug-in</h4>
 <p>Suppose a plug-in wants its tool bar items better integrated with actions
 from a different plug-in?&nbsp; Let's look at how the external
 tools plug-in (<b>org.eclipse.ui.externaltools</b>) integrates its action with the debugger tool bar.&nbsp; The
@@ -296,8 +296,12 @@ workbench.&nbsp; What does the external tools plug-in do?</p>
 &lt;/extension&gt;</font></pre><p>Note the use of the action set ID of the
 debugger in the tool bar path.&nbsp; Using an action set ID in the path denotes
 that the tool bar item should be placed in the tool bar used by the referenced
-action set.&nbsp; The tool bar path defined in that action set is appended to
-the action set ID.</p>
+action set.&nbsp;  Within a toolbar group, items are ordered by action set id, so
+for our example, the external tools action will appear after the debugger actions.&nbsp;</p>
+<p>When adding to an action set's tool bar, new groups can also be defined.&nbsp;
+If the external tools plug-in defined its <b> toolbarpath</b> as 
+<b>&quot;org.eclipse.debug.ui.launchActionSet/external&quot;</b> a new group would be created 
+for the action on the tool bar.&nbsp;  As with menus, tool bar groups are delineated by separators.&nbsp;</p>
 <h3 >Using paths from another plug-in </h3>
 
 
