*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_annotations.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_annotations.htm
@@ -5,32 +5,41 @@
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <TITLE>
-Annotations and rulers
+Source viewers
 </TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H2>Annotations and rulers</H2>
+<H2>Source viewers</H2>
 &lt;in progress&gt;
-<p>Annotation models.&nbsp;&nbsp;</p>
-<p>Use of MarkerAnnotationModel (with ref to markers section).</p>
-<p>
-<b><a href="../reference/api/org/eclipse/jface/text/source/package-summary.html">org.eclipse.jface.text.source</a></b>
-    defines a <b>source viewer</b>.&nbsp; A source viewer extends a text viewer
-    in order to support visual text annotations.&nbsp;&nbsp;&nbsp; These
-    annotations are used in the JDT source code editor to annotate Java
-    source code with problem descriptions and breakpoints.</p>
-<h3>Text annotations </h3>
+<p>describe a source viewer configuration, source viewers.&nbsp; Their primary
+purpose is to allow you to define and display annotations for your text....</p>
+<h3>Annotations and rulers</h3>
+<p>We've seen that a document provider is responsible for supplying an
+appropriate <a href="../reference/api/org/eclipse/jface/text/source/IAnnotationModel.html"><b>IAnnotationModel</b></a>
+for its documents.&nbsp; Let's look at some of the classes in the <b><a href="../reference/api/org/eclipse/jface/text/source/package-summary.html">org.eclipse.jface.text.source</a></b>
+package that provide support for annotations.</p>
+<p>A specialized text viewer, called a source viewer, is provided in order to
+support visual text annotations in a vertical ruler to the left of the source
+code.</p>
+<p><a href="../reference/api/org/eclipse/jface/text/source/IAnnotationModel.html"><b>IAnnotationModel</b></a>
+- defines a generic model used by a ruler to show annotations.&nbsp; The model
+holds annotations, knows their text position, and listens for changes &nbsp;&nbsp;</p>
+<p><b><a href="../reference/api/org/eclipse/ui/texteditor/MarkerAnnotationModel.html"> MarkerAnnotationModel</a></b>
+- defines a model for annotations that represent a marker on a resource in the
+workspace.&nbsp; (See <a href="resAdv_markers.htm">Resource markers</a> for more
+information on markers.)</p>
+<h4>Text annotations </h4>
 <p>SourceViewerDecorationSupport takes care of this.</p>
-<h3>Vertical ruler</h3>
+<h4>Vertical ruler</h4>
 <p>override createVerticalRuler in edtior class (explain TextEditor
 implementation)</p>
-<h3>Overview ruler</h3>
+<h4>Overview ruler</h4>
 <p>override createSourceViewer - explain TextEditor impl.&nbsp;
 IAnnotationAccess provides info about annotations.&nbsp; Must be
 extended/replaced if a custom annotation model is used.</p>
-<h3>Registering new annotations</h3>
+<h4>Registering new annotations</h4>
 <p>other plug-ins can contribute extensions (see plugin.xml of the text
 editor).&nbsp; AnnotationPreference implements the set of annotations that can
 be extended.&nbsp; Can override this if not interested.</p>
