converted from png to gif

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -379,7 +379,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <p>The Java compiler does a better job of rating the relevance of a proposal 
         based on the type expected in the context. For instance, for StringBuffer 
         sb= new [code assist], StringBuffer now shows up first on the list.</p>
-      <img src="images/smart_code_assist.png">
+      <img src="images/smart_code_assist.gif">
     </TD>
   </TR>		
   <TR>
@@ -391,7 +391,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <p>When you hover in the Java editor, you can hit the F2 key to make the 
         hover pane stay put so that you can scroll, resize, or select text from 
         it.</p>
-      <p><img src="images/sticky_hovers.png" ></p>
+      <p><img src="images/sticky_hovers.gif" ></p>
     </TD>
   </TR>	
   <TR>
@@ -403,7 +403,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <p>The Java editor automatically determines the right amount of indentation 
         to use when pasting code. This behavior is controlled by a preference 
         setting on the Java / Editor / Typing panel.</p>
-      <p><img src="images/paste_indent.PNG" width="429" height="214"></p>
+      <p><img src="images/paste_indent.gif"></p>
     </TD>
   </TR>	
   <TR>
@@ -425,7 +425,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <p>The Java editor now offers improved customizability for the visual appearance 
         of errors, warning, tasks, etc. These preference settings are found on 
         the Java / Editor / Annotations panel.</p>
-      <p><img src="images/annotations_pref_page.PNG" width="429" height="250"></p>
+      <p><img src="images/annotations_pref_page.gif"></p>
     </TD>
   </TR>	
   <TR>
@@ -459,7 +459,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <p>There is a new preference page (<b>Java / Editor / Typing</b>) for controlling 
         automatic closing of parentheses, brackets, strings, and comments, for 
         smart wrapping of strings, and other helpful Java-specific editor behavior.</p>
-      <p><img src="images/editor_typing_pref_page.PNG" width="428" height="279"></p>
+      <p><img src="images/editor_typing_pref_page.gif"></p>
     </TD>
   </TR>		
   <TR>
@@ -471,7 +471,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <p>The Java editor now put the wavy red underline (known colloquially as 
         the &quot;red sea&quot;) under all types of errors, now including uncaught 
         exceptions and unused variables, which require detailed flow analysis.</p>
-      <p><img src="images/errors_on_the_fly.PNG" width="420" height="134"></p>
+      <p><img src="images/errors_on_the_fly.gif" ></p>
     </TD>
   </TR>	
   <TR>
